test/e2e/fixtures/extauth-grpc-ver/authservice-default.yaml
---
apiVersion: getambassador.io/v3alpha1
kind: AuthService
metadata:
  name: auth
spec:
  ambassador_id: [(env('SLOT'))]
  auth_service: (join('.', ['auth', $namespace]))
  timeout_ms: 5000
  proto: grpc
