test/e2e/fixtures/extauth-grpc-ver/queries.json
[
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "kat-req-extauth-requested-status": "401",
      "baz": "baz",
      "kat-req-extauth-request-header": "baz"
    }
  },
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "kat-req-extauth-requested-status": "302",
      "kat-req-extauth-requested-location": "foo"
    }
  },
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "kat-req-extauth-requested-status": "401",
      "x-foo": "foo",
      "kat-req-extauth-requested-header": "x-foo"
    }
  },
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "kat-req-extauth-requested-status": "200",
      "authorization": "foo-11111",
      "foo": "foo",
      "kat-req-extauth-append": "foo=bar;baz=bar",
      "kat-req-http-requested-header": "Authorization"
    }
  }
]
